test/libyul/yulSyntaxTests/literal_invalid_type.yul
{
    let x:bool := true:unhappy
}
// ----
// TypeError 5473: (20-32='true:unhappy'): "unhappy" is not a valid type (user defined types are not yet supported).
// TypeError 5170: (20-32='true:unhappy'): Invalid type "unhappy" for literal "true".
// TypeError 3947: (10-16='x:bool'): Assigning value of type "unhappy" to variable of type "bool".
